<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/main_background"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EBM"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/poppins_extrabold"
        android:layout_marginTop="71dp"
        android:textColor="@color/white"
        android:textSize="54sp"
        android:lineHeight="54sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/login_et"
        android:text="@string/log_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginStart="22dp"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:fontFamily="@font/poppins_bold"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_et"
        android:layout_width="match_parent"
        android:layout_height="30dp"

        android:textColorHint="@color/light_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/password_et"
        android:background="@drawable/rectangle_1"
        android:layout_marginHorizontal="22dp"
        android:textSize="15sp"
        tools:text="Yourmail@gmail.com"
        android:hint="@string/email_hint"
        android:layout_marginBottom="11dp"
        android:paddingHorizontal="10dp"
        android:textColor="@color/light_gray"

        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textColorHint="@color/light_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/additional_password_et"
        android:background="@drawable/rectangle_1"
        android:layout_marginHorizontal="22dp"
        android:textSize="15sp"
        tools:text="Password"
        android:hint="@string/password"
        android:layout_marginBottom="11dp"
        android:paddingHorizontal="10dp"
        android:textColor="@color/light_gray"

        />
    <androidx.appcompat.widget.AppCompatEditText
        android:visibility="gone"
        android:hint="@string/password_confirmation"
        android:id="@+id/additional_password_et"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/continue_button"
        android:background="@drawable/rectangle_1"
        android:layout_marginHorizontal="22dp"
        android:textSize="15sp"
        tools:text="Confirm password"
        android:layout_marginBottom="33dp"
        android:paddingHorizontal="10dp"
        android:textColor="@color/light_gray"

        />
    <TextView
        android:id="@+id/subtitle"
        android:text="@string/subtitle"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_regular"
        android:textSize="15sp"
        android:lineHeight="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <TextView
        android:id="@+id/continue_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        android:background="@drawable/rectangle_90"
        android:layout_width="120dp"
        android:layout_marginBottom="10dp"
        android:layout_height="30dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="11sp"
        android:fontFamily="@font/open_sans_medium"
        android:text="@string/continue_text"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginBottom="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/transparent"
        android:text="@string/register"
        android:textSize="11sp"
        android:fontFamily="@font/open_sans_medium"
        android:textColor="@color/light_gray"/>



</androidx.constraintlayout.widget.ConstraintLayout>