<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".ui.search.activity.SearchActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/middle_gradient"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/Welcome"
        android:fontFamily="@font/open_sans_medium"
        android:textSize="21sp"
        android:textColor="?attr/colorOnPrimary"
        android:lineHeight="21sp"/>
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/dark_mode_switch"
        android:text="@string/dark_theme"
        app:thumbTint="?attr/colorSwitchThumbNormal"
        app:trackTint="?attr/colorSurface"
        android:textSize="16sp"
        android:textColor="?attr/colorOnPrimary"
        android:fontFamily="@font/open_sans_medium"
        android:lineHeight="21sp"
        android:paddingStart="16dp"
        android:layout_marginEnd="15dp"
        android:paddingEnd="6dp"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/welcome_tv"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/welcome_text_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_tv"
        android:text="@string/what_do_you_want_to_learn_today"
        android:fontFamily="@font/open_sans_medium"
        android:textSize="13sp"
        android:textColor="@color/light_gray"
        android:lineHeight="21sp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/search_field"
        android:imeOptions = "actionDone"
        android:singleLine="true"
        android:inputType="text"
        android:maxLines="1"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@drawable/search_field_background"
        app:layout_constraintStart_toEndOf="@id/back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_text_tv"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/search_icon"
        android:paddingHorizontal="10dp"
        android:textColor="@color/light_gray"
        android:fontFamily="@font/open_sans_medium"
        tools:text="Search song, artist or word"
        android:textSize="11sp"/>
    <ImageButton
        android:visibility="gone"
        android:id="@+id/back_btn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15sp"
        app:layout_constraintBottom_toBottomOf="@id/search_field"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/back_icon"
        android:background="@null"
        />
    <ProgressBar
        android:id="@+id/search_pb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:visibility="gone"
        tools:visibility="visible"/>
    <ImageView
        android:id="@+id/clear_button"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/search_field"
        app:layout_constraintTop_toTopOf="@id/search_field"
        app:layout_constraintBottom_toBottomOf="@id/search_field"
        android:src="@drawable/clear_icon"
        android:layout_marginEnd="5dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:tint="@color/light_gray" />
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        app:layout_constraintTop_toBottomOf="@id/search_field"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@android:color/transparent"
        app:tabTextColor="@color/light_gray"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorHeight="2dp"
        app:tabIndicatorGravity="bottom"
        app:tabIndicatorColor="@color/main_purple"
        app:tabSelectedTextColor="?attr/colorOnPrimary">
        <com.google.android.material.tabs.TabItem
            android:layout_height="5dp"
            android:layout_width="30dp"
            android:text="@string/loved" />
        <com.google.android.material.tabs.TabItem
            android:layout_height="5dp"
            android:layout_width="30dp"
            android:text="@string/top_5_songs"/>
        <com.google.android.material.tabs.TabItem
            android:layout_height="5dp"
            android:layout_width="30dp"
            android:text="@string/top_5_words"/>

    </com.google.android.material.tabs.TabLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/songswitch_recyclerview"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/song_recyclerview_item"
        />
    <TextView
        android:id="@+id/favorites_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/songswitch_recyclerview"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        app:layout_goneMarginTop="25dp"
        android:text="@string/search_history"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="16sp"
        android:fontFamily="@font/open_sans_medium"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favorites_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/favorites_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/favorite_song_list_item"/>



</androidx.constraintlayout.widget.ConstraintLayout>